Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118902

Qmltyperegistrar doesn't escape "-" in "#ifdef" generated code

    XMLWordPrintable

Details

    • All
    • adc3455c1 (dev), f9b8bdb32 (6.6), e84ff474c (tqtc/lts-6.5)

    Description

      When my target contains dashes, then qt6_generate_foreign_qml_types generates the filenames with dashes, and subsequently the qmltyperegistrar will emit `#ifndef`-Include-Guards with Dashes in the "Macro" Names.

      I worked it around by forking qt6_generate_foreign_qml_types to replace dashes with _-es, but arguably, the bug is in the tool.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            jschaubzes Johannes Schaub
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes