qmltyperegistrar: Guard against forbidden characters in target names

We don't want to generate invalid C++ from those.

Pick-to: 6.5
Fixes: QTBUG-118902
Change-Id: Ife580fe5d92f8f5c50be557dec07e1b0e12442d6
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit adc3455c115ab072fdb85e7d1206c835067fd532)
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>