tests/auto/qml/qmlsplitlib/main2.qml
@@ -1,0 +1,8 @@
+// Copyright (C) 2021 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
+
+import SplitLib
+
+SplitLib2 {
+    property string s: Bar2.objectName
+}
