tests/auto/qml/qmlsplitlib/tst_qmlsplitlib.cpp
@@ -6,12 +6,14 @@
 #include <QObject>
 #include <qtest.h>
 #include "lib.h"
+#include "lib2.h"
 
 class tst_splitlib : public QObject
 {
     Q_OBJECT
 private slots:
     void verifyComponent();
+    void verifyComponent2();
 };
 
 void tst_splitlib::verifyComponent()
@@ -22,6 +24,17 @@ void tst_splitlib::verifyComponent()
     QScopedPointer o(c.create());
     QVERIFY(!o.isNull());
     auto lib = qobject_cast<SplitLib *>(o.get());
+    QVERIFY(lib);
+}
+
+void tst_splitlib::verifyComponent2()
+{
+    QQmlEngine engine;
+    QQmlComponent c(&engine, QStringLiteral("qrc:/qt/qml/SplitLib/main2.qml"));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+    QScopedPointer o(c.create());
+    QVERIFY(!o.isNull());
+    auto lib = qobject_cast<SplitLib2 *>(o.get());
     QVERIFY(lib);
 }
 
